syntax = "proto3";

package auth;

option go_package = ".;proto";

// 注册请求消息
message RegisterRequest {
  string username = 1;
  string password = 2;
}

// 注册响应消息
message RegisterResponse {
  string token = 1;
  string message = 2;
}

// 登录请求消息
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应消息
message LoginResponse {
  string token = 1;
  string message = 2;
}

// AuthService 服务定义
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}